manifests/app-rule-75-25.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - greeting-gateway
  http:
  - route:
    - destination:
        host: greeting
        subset: greeting-hello
      weight: 75
    - destination:
        host: greeting
        subset: greeting-howdy
      weight: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeting-destination-rule
spec:
  host: greeting
  subsets:
  - name: greeting-hello
    labels:
      greeting: hello
  - name: greeting-howdy
    labels:
      greeting: howdy
