manifests/app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - greeting-gateway
  http:
    - route:
        - destination:
            host: greeting
